<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:layout_gravity="end|bottom"
            android:layout_marginHorizontal="34dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                android:text="@string/AC" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_plus_or_minus"
                android:onClick="onOperationClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/plus_or_minus" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                style="@style/Gray.Button"
                android:id="@+id/btn_percent"
                android:onClick="onOperationClick"
                android:text="@string/percent"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"
                android:text="@string/division"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:text="@string/nine"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiplication"
                android:onClick="onOperationClick"
                android:text="@string/multiplication"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:text="@string/six"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:text="@string/three"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/plus"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:layout_width="178dp"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_point"
                android:layout_marginHorizontal="18dp"
                android:onClick="onNumberClick"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="@string/equal"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>